# piano

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.rs  derivation.snapshot  piano-runtime.carve  piano.carve  rust_out
.cargo/: mutants.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/plans/: 2026-02-22-cargo-profile-design.md  2026-02-22-cross-thread-instrumentation-design.md  2026-02-22-cross-thread-instrumentation.md  2026-02-22-per-frame-alloc-tracking-design.md  2026-02-22-per-frame-alloc-tracking.md  2026-02-22-piano-implementation.md  2026-02-22-piano-v2-design.md  2026-02-23-fix-cross-thread-wall-accounting-design.md  2026-02-23-fix-cross-thread-wall-accounting.md
docs/standards/: code.md  commits.md  issues.md  pull-requests.md  releases.md  ux.md
piano-runtime/: Cargo.toml
piano-runtime/benches/: piano_future_overhead.rs
piano-runtime/examples/: codegen_inspect.rs
piano-runtime/src/: aggregator.rs  alloc.rs  buffer.rs  children.rs  collector.rs  cpu_clock.rs  ctx.rs  file_sink.rs  fixtures.rs  generated.rs  generated_root_ops.rs  guard.rs  inflight.rs  invariants.rs  kani_proofs.rs  kani_serialization_proofs.rs  kani_state_machine_proofs.rs  lib.rs  loom_tests.rs  measurement.rs  output.rs  parent.rs  piano_future.rs  predicates.rs  session.rs  shutdown.rs  span_id.rs  sync_util.rs  thread_id.rs  time.rs  tsc.rs  types.rs
piano-runtime/src/channel/: async_ch.rs  crossbeam.rs  futures_ch.rs  mod.rs  std_mpsc.rs  tokio_mpsc.rs
piano-runtime/src/collector/: fork_adopt.rs  mod.rs  name_table.rs  ndjson.rs
piano-runtime/tests/: accuracy.rs  alloc.rs  alloc_failing.rs  alloc_oracle.rs  asm_codegen.rs  buffer.rs  buffer_global.rs  calibration.rs  codegen_patterns.rs  compositions.rs  ctx.rs  enter.rs  enter_async.rs  file_sink.rs  flush.rs  generated_measurement_types.rs  generated_predicates.rs  generated_runtime_ops.rs  generated_serialization_ops.rs  glibc_signal_enumeration.rs  guard.rs  measurement.rs  mutex_poisoning.rs  no_test_backdoors.rs  output.rs  output_format.rs  output_never_panics.rs  overhead_breakdown.rs  parent.rs  piano_allocator.rs  piano_future.rs  poc_cbc_patterns.rs  recursion.rs  rust_source_enumeration.rs  session.rs  shutdown.rs  shutdown_safety.rs  signal.rs  span_id.rs  thread_id.rs  (+3 more)
piano-runtime/tests/data/: golden_run.ndjson
runtime-src/: Cargo.toml.embed
runtime-src/src/channel/: crossbeam.rs
runtime-src/src/collector/: mod.rs  ndjson.rs  signal.rs
src/: build.rs  channel_rewrite.rs  error.rs  fixtures.rs  generated.rs  generated_root_ops.rs  invariants.rs  lib.rs  macro_expand.rs  main.rs  naming.rs  predicates.rs  report.rs  resolve.rs  rewrite.rs  runtime_embed.rs  source_map.rs  staging.rs  types.rs  wrapper.rs
src/report/: diff.rs  format.rs  load.rs  mod.rs  tag.rs  test_util.rs
src/rewrite/: allocator.rs  macro_rules.rs  mod.rs  registrations.rs  select_inject.rs  shutdown.rs  token_util.rs
tests/: alloc_threaded.rs  async_alloc.rs  async_integration.rs  async_main_return_type.rs  async_nested_select.rs  async_self_time.rs  async_tokio.rs  cfg_gated_alloc.rs  cli_output.rs  cpu_time.rs  cross_thread.rs  custom_bin_path.rs  e2e.rs  error_line_remap.rs  exit_in_non_main.rs  generated_cli_ops.rs  integration_frames.rs  macro_rules.rs  minimal_integration.rs  msrv_compat.rs  process_exit.rs  project_root.rs  proptest_rewrite.proptest-regressions  proptest_rewrite.rs  publish_compat.rs  run_cmd.rs  sample_crossval.rs  special_fns.rs  strict_lints.rs  threaded_integration.rs  workspace_layout.rs  workspace_member.rs
tests/common/: mod.rs
