[package]
name = "piano"
version = "0.0.1"
edition = "2024"
description = "Automated instrumentation-based profiling for Rust"
license = "MIT"
repository = "https://github.com/rocketman-code/piano"
keywords = ["profiling", "instrumentation", "performance"]
categories = ["development-tools::profiling"]

[dependencies]
