[workspace]
members = ["piano-runtime"]

[package]
name = "piano"
version = "0.2.1"
edition = "2024"
description = "Automated instrumentation-based profiling for Rust"
license = "MIT"
repository = "https://github.com/rocketman-code/piano"
keywords = ["profiling", "instrumentation", "performance"]
categories = ["development-tools::profiling"]

[dependencies]
clap = { version = "4", features = ["derive"] }
syn = { version = "2", features = ["full", "visit", "visit-mut"] }
quote = "1"
prettyplease = "0.2"
toml_edit = "0.22"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ignore = "0.4"
tempfile = "3"

[[bin]]
name = "piano"
path = "src/main.rs"

[lib]
name = "piano"
path = "src/lib.rs"
