[workspace]
members = ["piano-runtime"]

[package]
name = "piano"
version = "0.15.0"
edition = "2024"
rust-version = "1.88"
description = "Automatic instrumentation-based profiler for Rust. Measures self-time, call counts, and heap allocations per function."
license = "GPL-3.0-only"
repository = "https://github.com/rocketman-code/piano"
keywords = ["profiling", "profiler", "instrumentation", "performance", "timing"]
categories = ["development-tools::profiling"]

[dependencies]
clap = { version = "4", features = ["derive"] }
toml_edit = "0.22"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ignore = "0.4"
anstyle = "1"
anstream = "0.6"
regex = "1"
ra_ap_syntax = "=0.0.270"
ra_ap_mbe = "=0.0.270"
ra_ap_span = "=0.0.270"
ra_ap_tt = "=0.0.270"
ra_ap_parser = "=0.0.270"
ra_ap_syntax-bridge = "=0.0.270"

[[bin]]
name = "piano"
path = "src/main.rs"

[lib]
name = "piano"
path = "src/lib.rs"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
proptest = "1"
tempfile = "3"

[build-dependencies]
toml_edit = "0.22"
