[package]
name = "piano-runtime"
version = "0.12.0"
edition = "2021"
rust-version = "1.59"
description = "Zero-dependency timing and allocation tracking runtime for piano profiler"
license = "MIT"
repository = "https://github.com/rocketman-code/piano"
keywords = ["profiling", "instrumentation"]
categories = ["development-tools::profiling"]

[features]
cpu-time = []
_test_internals = []

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
serial_test = "3"
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }

[[bench]]
name = "piano_future_overhead"
harness = false
