[package]
name = "piano-runtime"
version = "0.12.0"
edition = "2021"
rust-version = "1.59"
description = "Zero-dependency timing and allocation tracking runtime for piano profiler"
license = "MIT"
repository = "https://github.com/rocketman-code/piano"
keywords = ["profiling", "instrumentation"]
categories = ["development-tools::profiling"]

[features]
cpu-time = []
channels-crossbeam = ["crossbeam-channel"]
_test_internals = []

[dependencies]
crossbeam-channel = { version = "0.5", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
crossbeam-channel = "0.5"
serial_test = "3"
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }

[[bench]]
name = "piano_future_overhead"
harness = false
