[package]
name = "piano-runtime"
version = "0.14.0"
edition = "2021"
rust-version = "1.59"
description = "Zero-dependency timing and allocation tracking runtime for piano profiler"
license = "MIT"
repository = "https://github.com/rocketman-code/piano"
keywords = ["profiling", "instrumentation"]
categories = ["development-tools::profiling"]

[features]
_test_internals = []

[dev-dependencies]
piano-runtime = { path = ".", features = ["_test_internals"] }
criterion = { version = "0.5", features = ["html_reports"] }

tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }

[[bench]]
name = "piano_future_overhead"
harness = false
